Fix safari bug where label + working spinner was too high

--- a/draft-packages/button/KaizenDraft/Button/components/GenericButton.module.scss
+++ b/draft-packages/button/KaizenDraft/Button/components/GenericButton.module.scss
@@ -85,6 +85,13 @@
   @extend %caButtonDestructiveModifier;
 }
 
+.loadingSpinner {
+  // This is to fix a problem in safari where the svg stretched too high
+  svg {
+    height: 100%;
+  }
+}
+
 .centeredLoadingSpinner {
   position: absolute;
   left: 0;
